--- a/index.html
+++ b/index.html
@@ -109,3 +109,147 @@
  </div>  </div>
 
 <div class="containercirc">
+<img id="textorotacion" src="Imagenes/Textorotacion.png" alt="texto rotando"> 
+<div class="personawrapper"> <img id="persona" src="Imagenes/persona.png" alt="persona"> </div>
+</div>
+
+<section id="About">
+<div class="About1">
+<div class="rectangulo1"> </div>
+<h1 id="Encabezado"> WORRIED ABOUT <br> THE FUTURE? <br>LET'S READ YOU <img id="ojo2" src="Imagenes/Ojo.gif" alt="Ojo"></h1>
+<div class="abouttext">
+  <div class="Encabezado2"> WELCOME TO Z-TAROT, AN ONLINE TAROT WEBSITE FOR 
+  THE YOUNGER GENERATION WITH USEFUL AND RELATABLE ADVICE.
+  </div>
+  <div class= "warningtext"> 
+    <div class="asterisk"> <img id="asterisco" src="Imagenes/asterisco.png" alt="asterisco"> 
+    </div>
+    <div class="warning"> <p id="warningp">THIS WEBSITE IS FOR ENTERTAINMENT PURPOSES ONLY. DO NOT
+  TAKE THE ZTAROT READINGS AS APROVED PSYCHOLOGICAL ADVICE </p>
+    </div>
+  </div>
+</div>
+<div class="genzflex">
+<div class="cat"> <img id="possesedcat" src="Imagenes/Possesed_Cat.gif" alt="possesed cat"></div>
+<div class="genztext">
+<p class="agenztarot"> A GEN-Z TAROT </p>
+<p class="textopag2"> DO YOU WANT TO KNOW IF YOU’LL FINALLY GET A JOB AFTER
+ 5 YEARS OF INTERNSHIPS OR IF YOUR CHRONIC DEPRESSION WILL FINALLY GO AWAY?
+WE HAVE JUST THE ASWERS FOR YOU. </p>
+<div class="reading"> <a href="Reading.html">READING </a></div>
+</div> 
+</div>
+<div id="Thecards"> 
+
+<div class="cardstext">
+        <div id="rect2" class="rectangulo2"> </div> 
+		<p id="Cards"> THE CARDS </p>
+</div>
+
+<div class="textsexplanation"> <div class="explanation"> THESE CARDS BRING A NEW PERSPECTIVE TO THE TRADITIONAL DECKS THROUGH THEIR RELATABLE,
+MODERN INTERPRETATIONS OF THE MAJOR ARCANA. THE IMAGERY DEPICTED ON THE CARDS SHOWCASES DAY-TO-DAY ASPECTS AND PHRASES FROM INTERNET CULTURE AND 
+YOUTH SLANG. </div> </div>
+
+
+<div class="listcontainer">
+<div class="mystic"> <img id="mysticeye" src="Imagenes/Mystic_eye.gif" alt="illustration of a kid with a third eye"></div> 
+	 
+<ul id="cardlist">
+      <li><div id="viewslider"> <a class="cardlink" href="The-Cards.html"> VIEW SLIDER <img id="arrow2" src="Imagenes/arrowright.png" alt="Arrow pointing right"></a> </div></li>
+      <li class="cardlinks" id="t1">THE CATS  <img class="imghover" id="i1" src="Imagenes/miniatura_16.gif" alt="Tarot Card The Cats"></li>
+      <li class="cardlinks" id="t2">THE MUSIC  <img class="imghover" id="i2" src="Imagenes/miniatura_17.png" alt="Tarot Card The Music"></li>
+      <li class="cardlinks" id="t3">THE SPIDERS<img class="imghover" id="i3" src="Imagenes/miniatura_18.gif" alt="Tarot Card The Spiders"></li>
+	  <li class="cardlinks" id="t4">HEART TO HEART<img class="imghover" id="i4" src="Imagenes/miniatura_19.gif" alt="Tarot Card Heart to Heart"></li>
+      <li class="cardlinks" id="t5">THE SNAIL<img class="imghover" id="i5" src="Imagenes/miniatura_20.gif" alt="Tarot Card The Snail"></li>
+      <li class="cardlinks" id="t6">THE BOOTS<img class="imghover" id="i6" src="Imagenes/miniatura_21.gif" alt="Tarot Card The Boots"></li>
+	  <li class="cardlinks" id="t7">THE POKE<img class="imghover" id="i7" src="Imagenes/miniatura_22.gif" alt="Tarot Card Poke"></li>
+      <li class="cardlinks" id="t8">THE ENBY<img class="imghover" id="i8" src="Imagenes/miniatura_23.gif" alt="Tarot Card The Enby"></li>
+      <li class="cardlinks" id="t9">THE ZODIAC SIGN<img class="imghover" id="i9" src="Imagenes/miniatura_24.gif" alt="Tarot Card The Zodiac Sign"></li>
+	  <li class="cardlinks" id="t10">THE ECLIPSE<img class="imghover" id="i10" src="Imagenes/miniatura_25.png" alt="Tarot Card The Eclipse"></li>
+      <li class="cardlinks" id="t11">THE GHOST<img class="imghover" id="i11" src="Imagenes/miniatura_26.png" alt="Tarot Card The Ghost"></li>
+      <li class="cardlinks" id="t12">THE SKULL<img class="imghover" id="i12" src="Imagenes/miniatura_27.gif" alt="Tarot Card The Skull"></li>
+	  <li class="cardlinks" id="t13">FUCK OFF<img class="imghover" id="i13" src="Imagenes/miniatura_28.png" alt="Tarot Card Fuck Off"></li>
+      <li class="cardlinks" id="t14">THE FOOL<img class="imghover" id="i14" src="Imagenes/miniatura_29.gif" alt="Tarot Card The Fool"></li>
+      <li class="cardlinks" id="t15">THE NOSTALGIA<img class="imghover" id="i15" src="Imagenes/miniatura_30.gif" alt="Tarot Card The Nostalgia"></li>
+	  <li class="cardlinks" id="t16">THE OVERTHINKING<img class="imghover" id="i16" src="Imagenes/miniatura_31.gif" alt="Tarot Card The Overthinking"></li>
+      <li class="cardlinks" id="t17">THE STAR BOY<img class="imghover" id="i17" src="Imagenes/miniatura_32.gif" alt="Tarot Card The Starboy"></li>
+      <li class="cardlinks" id="t18">THE BREAKDOWN<img class="imghover" id="i18" src="Imagenes/miniatura_33.gif" alt="Tarot Card The Breakdown"></li>
+	  <li class="cardlinks" id="t19">THE HANGED DUDE<img class="imghover" id="i19" src="Imagenes/miniatura_34.gif" alt="Tarot Card The Hanged Dude"></li>
+      <li class="cardlinks" id="t20">THE COMFORT ZONE<img class="imghover" id="i20" src="Imagenes/miniatura_35.png" alt="Tarot Card The Comfort Zone"></li>
+</ul> </div>      
+</div>
+</div>
+</section>
+
+
+<div id="Contact">
+<div class="Contact1">
+<div class="Contactinfo">
+<div class="contacttext">
+<div id="rect1" class="rectangulo1"></div>
+<p id="contacto"> CONTACT </p> </div>
+<div class="linksrrss">
+<div class="linkstext"> <a href="https://www.instagram.com/alekxty?igsh=ZGNjOWZkYTE3MQ==">INSTAGRAM </a></div>
+<div class="linkstext"> <a href="https://www.behance.net/lucarodrguez10">BEHANCE </a></div>
+<div class="linkstext"> <a href="https://www.linkedin.com/in/alec-rodr%C3%ADguez-mancebo-a4874b2a7?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">LINKEDIN  </a></div>
+
+ </div>
+<div class="madeby"> 
+<p> Z TAROT 2023. Made by Alec Rodríguez.<br> Illustrations by <a href="https://www.instagram.com/inkgraveyard?igsh=MzRlODBiNWFlZA==" class="linkares">Ares Asegurado.</a> </p>
+</div>
+<div class="email"> 
+<p id="gmail"> ALEK.RMANCEBO@GMAIL.COM </p>
+<p id="ubicación"> MADRID, ESPAÑA. </p>
+</div>
+</div>
+<div class="view-loop">
+  <ul class="title-slide">
+    <li class="title"><span><span>GOODBYE GOODBYE GOODBYE GOODBYE GOODBYE </span></span></li>
+    <li class="title"><span><span>GOODBYE GOODBYE GOODBYE GOODBYE GOODBYE </span></span></li>
+    <li class="title"><span><span>GOODBYE GOODBYE GOODBYE GOODBYE GOODBYE </span></span></li>
+    <li class="title"><span><span>GOODBYE GOODBYE GOODBYE GOODBYE GOODBYE </span></span></li>
+    <li class="title"><span><span>GOODBYE GOODBYE GOODBYE GOODBYE GOODBYE </span></span></li>
+    <li class="title"><span><span>GOODBYE GOODBYE GOODBYE GOODBYE GOODBYE </span></span></li>
+    <li class="title"><span><span>GOODBYE GOODBYE GOODBYE GOODBYE GOODBYE </span></span></li>
+    <li class="title"><span><span>GOODBYE GOODBYE GOODBYE GOODBYE GOODBYE </span></span></li>
+    <li class="title"><span><span>GOODBYE GOODBYE GOODBYE GOODBYE GOODBYE </span></span></li>
+    <li class="title"><span><span>GOODBYE GOODBYE GOODBYE GOODBYE GOODBYE </span></span></li>
+  </ul>
+</div>
+</div>
+</div>
+
+<div class="cursor">
+<div class="circle" ></div>
+<div class="circle" ></div>
+<div class="circle" ></div>
+<div class="circle" ></div>
+<div class="circle" ></div>
+<div class="circle" ></div>
+<div class="circle" ></div>
+<div class="circle" ></div>
+<div class="circle" ></div>
+<div class="circle" ></div>
+<div class="circle" ></div>
+<div class="circle" ></div>
+<div class="circle" ></div>
+<div class="circle" ></div>
+<div class="circle" ></div>
+<div class="circle" ></div>
+<div class="circle" ></div>
+<div class="circle" ></div></div>
+
+
+<script src="java.js"> 
+</script>  
+<script>
+function myFunction() {
+  document.documentElement.style.scrollBehavior = "smooth";
+}
+</script>
+<script src="supernova.js"> 
+</script> 
+
+</body>
+
+</html>
